add get data by user and by date
- add API get by user
- add API get by date
- add OffDayService class
- add API resources
- update swagger
